# vlm-benchmark

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  TODO.md  pyproject.toml  requirements.txt
configs/datasets/: drivebench.yaml
data/sample/: drivebench_sample.json
scripts/: _bootstrap.py  curate.py  evaluate.py  fetch_images.py  infer.py  make_sample_data.py  preview_prompt.py  validate_scorer.py
src/avbench/: __init__.py  config.py  io_utils.py  schema.py
src/avbench/curation/: base.py  build.py  sensor.py  stratify.py
src/avbench/curation/adapters/: __init__.py  drivebench.py
src/avbench/eval/: metrics.py  report.py  scorer.py  synthetic.py
src/avbench/inference/: client.py  grounding.py  parsing.py  runner.py  view.py
src/avbench/inference/backends/: gemini.py  glm.py  mock.py  qwen.py
src/avbench/inference/strategies/: __init__.py  base.py  consistency.py  direct.py  self_reflection.py  verbal_confidence.py  vl_uncertainty.py
tests/: conftest.py  test_drivebench_mcq.py  test_grounding.py  test_metrics.py  test_parsing.py  test_qwen_backend.py  test_report.py  test_scorer.py  test_view.py
