[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "avbench"
version = "0.1.0"
description = "VLM self-knowledge benchmark for autonomous driving (prototype)"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "google-genai>=1.0",
    "pillow>=10.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[tool.setuptools.packages.find]
where = ["src"]
